[css-grid] WPT test subgrid/independent-formatting-context.html fails in Firefox
Categories
(Core :: Layout: Grid, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox123 | --- | fixed |
People
(Reporter: dholbert, Assigned: dholbert)
References
(Blocks 2 open bugs)
Details
Attachments
(1 file, 2 obsolete files)
This WPT test fails just in Firefox:
https://wpt.fyi/results/css/css-grid/subgrid/independent-formatting-context.html
Direct link to test:
https://wpt.live/css/css-grid/subgrid/independent-formatting-context.html
It happens to be included in the interop2022 test suite, in the subgrid category. Hence: filing under that metabug. (Here's the link for all such tests that we fail, FWIW:
https://wpt.fyi/results/css/css-grid/subgrid?label=master&label=experimental&aligned&view=subtest&q=label%3Ainterop-2022-subgrid%20firefox%3A%21pass )
Comment 1•3 years ago
|
||
The severity field is not set for this bug.
:dholbert, could you have a look please?
For more information, please visit auto_nag documentation.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 2•2 years ago
|
||
There are a bunch of rects here, each testing a different thing that produces an independent formatting context.
We only fail (render red) on the first one, where the .subgrid element has position:absolute. I confirmed that if I set grid-template-rows: initial on that element (make the subgrid styling be ignored/overridden), then we render green there (i.e. we will do the right thing if we start ignoring the subgrid styling on that element).
That element's child is the thing that's green, and we seem to be resolving that green child to have 0 height for some reason.
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 3•2 years ago
|
||
| Comment hidden (obsolete) |
| Comment hidden (obsolete) |
| Comment hidden (obsolete) |
| Comment hidden (obsolete) |
| Assignee | ||
Comment 8•2 years ago
|
||
sorry for bugspam; I decided to split parts of this off as patches in helper-bugs, but I left this bug's bug number in the commit messages of some of those helper-bugs. :) Cleaned up now, I think.
Updated•2 years ago
|
Comment 10•2 years ago
|
||
| bugherder | ||
Description
•