Bug 1800563: Inhibit out-of-flow grid containers from being subgrids. r=TYLin

This patch does two things:

1. Extends ShouldInhibitSubgridDueToIFC to return true for out-of-flow frames,
   per spec (which makes us pass the WPT independent-formatting-context.html).
   Spec reference: https://drafts.csswg.org/css-grid-2/#subgrid-listing
   "...if the grid container [the one that's styled to be a subgrid] is
   otherwise forced to establish an independent formatting context (for
   example, due to layout containment or absolute positioning), the used value
   is the initial value, 'none', and the grid container is not a subgrid."

2. Removes some newly-dead code from ComputeSelfSubgridMasonryBits that
   provided some special handling for out-of-flow subgrids (which are now
   impossible to create, as of this change); and also remove
   WillHaveAtLeastOneTrackInAxis() whose last caller I'm removing here.

3. Renames a variable 'gridParent' to 'parentGrid' to match the spec
   terminology at https://drafts.csswg.org/css-grid-2/#parent-grid

Differential Revision: https://phabricator.services.mozilla.com/D193731